code alignment need to fix links

--- a/css/index.css
+++ b/css/index.css
@@ -101,16 +101,15 @@
 
 
 @media screen and (max-width: 960px) {
-    #signature{
-        width: 90%;
-        max-width: 30em;
-        height: auto;
-    }
-    
-    .summary img{
-        width: 3em;
-    }
-	
+	#signature{
+			width: 90%;
+			max-width: 30em;
+			height: auto;
+	}
+
+	.summary img{
+			width: 3em;
+	}
 }
 
 @media screen and (max-width: 700px){
@@ -180,6 +179,7 @@
 	
 	#arrowL , #arrowR {
 		display: none;
+	}
 }
 
 
